--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -16,116 +16,251 @@
    ],
    "source": [
     "import torch\n",
-    "import torch.nn as nn"
+    "import torch.nn as nn\n",
+    "import torchvision.transforms as transforms\n",
+    "import torchvision.datasets as datasets\n",
+    "from torch.utils.data import DataLoader\n",
+    "from models2 import Discriminator, Generator\n",
+    "import torch.optim as optim\n",
+    "import torchvision\n",
+    "from torch.utils.tensorboard import SummaryWriter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Generator(nn.Module):\n",
-    "    def __init__(self,nz, filters):\n",
-    "        super(Generator, self).__init__()\n",
-    "        self.gan = nn.Sequential(\n",
-    "            self._block(nz        , 16*filters, 4, 1, 0, bias=False), # out 4x4\n",
-    "            self._block(16*filters, 8*filters , 4, 2, 1, bias=False), # out 8x8\n",
-    "            self._block(8*filters , 4*filters , 4, 2, 1, bias=False), # out 16x16\n",
-    "            self._block(4*filters , 2*filters , 4, 2, 1, bias=False), # out 32x32\n",
-    "            self._block(2*filters , 3         , 4, 2, 1, bias=False, out=True), # out 64x64\n",
-    "        )\n",
-    "\n",
-    "    def _block(self, in_channels, out_channels, kernel_size, stride, padding, bias, out=False):\n",
-    "        return nn.Sequential(            \n",
-    "            nn.ConvTranspose2d(in_channels=in_channels,\n",
-    "                               out_channels=out_channels, \n",
-    "                               kernel_size=kernel_size,\n",
-    "                               stride=stride,\n",
-    "                               padding=padding, \n",
-    "                               bias=bias),\n",
-    "            \n",
-    "            nn.BatchNorm2d(out_channels),\n",
-    "            nn.Tanh() if out else nn.ReLU()\n",
-    "            )\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        return self.gan( x)"
+    "IMAGE_SIZE = 128\n",
+    "CHANNELS_IMG = 3\n",
+    "BATCH_SIZE = 32\n",
+    "LEARNING_RATE = 1e-4\n",
+    "EPOCHS = 5\n",
+    "Z_DIM = 100\n",
+    "FILTERS = 64"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Discriminator(nn.Module):\n",
-    "    def __init__(self, filters):\n",
-    "        super(Discriminator, self).__init__()\n",
-    "        self.gan = nn.Sequential(\n",
-    "            self._block(3         , 2*filters, 4, 2, 0, bias=False), # out 32x32 #Shouldn't be batchnorm\n",
-    "            self._block(2*filters, 4*filters , 4, 2, 1, bias=False), # out 16x16\n",
-    "            self._block(4*filters , 8*filters , 4, 2, 1, bias=False), # out 8x8\n",
-    "            self._block(8*filters , 16*filters , 4, 2, 1, bias=False), # out 4x4\n",
-    "            self._block(16*filters , 1   , 4, 2, 1, bias=False, out=True), # out 1x1 #Shouldn't be batchnorm\n",
-    "        )\n",
+    "dataset_path = \"D:\\\\Desktop_D\\\\Workspace\\\\Moje\\\\ML\\\\allfaces\\\\dataset\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transforms = transforms.Compose(\n",
+    "    [\n",
+    "        transforms.Resize((IMAGE_SIZE,IMAGE_SIZE)),\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize(\n",
+    "            [0.5 for _ in range(CHANNELS_IMG)], [0.5 for _ in range(CHANNELS_IMG)]\n",
+    "        ),\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = datasets.ImageFolder(root=dataset_path, transform=transforms)\n",
+    "dataloader = DataLoader(dataset, batch_size=BATCH_SIZE, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "disc = Discriminator(FILTERS).to(device)\n",
+    "gen = Generator(100,FILTERS).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt_gen = optim.Adam(gen.parameters(), lr=LEARNING_RATE, betas=(0.5, 0.999))\n",
+    "opt_disc = optim.Adam(disc.parameters(), lr=LEARNING_RATE, betas=(0.5, 0.999))\n",
+    "criterion = nn.BCELoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writer_fake = SummaryWriter(f\"logs/fake\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Generator(\n",
+       "  (net): Sequential(\n",
+       "    (0): Sequential(\n",
+       "      (0): ConvTranspose2d(100, 256, kernel_size=(4, 4), stride=(1, 1), bias=False)\n",
+       "      (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (2): ReLU()\n",
+       "    )\n",
+       "    (1): Sequential(\n",
+       "      (0): ConvTranspose2d(256, 128, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "      (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (2): ReLU()\n",
+       "    )\n",
+       "    (2): Sequential(\n",
+       "      (0): ConvTranspose2d(128, 64, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "      (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (2): ReLU()\n",
+       "    )\n",
+       "    (3): Sequential(\n",
+       "      (0): ConvTranspose2d(64, 32, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "      (1): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (2): ReLU()\n",
+       "    )\n",
+       "    (4): ConvTranspose2d(32, 3, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1))\n",
+       "    (5): Tanh()\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "disc.train()\n",
+    "gen.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fixed_noise = torch.randn(32, Z_DIM, 1, 1).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def callback(epoch, batch_idx, loss_disc, loss_gen, gen, step):\n",
+    "    print(\n",
+    "        f\"Epoch [{epoch}/{EPOCHS}] Batch {batch_idx}/{len(dataloader)} \\\n",
+    "          Loss D: {loss_disc:.4f}, loss G: {loss_gen:.4f}\"\n",
+    "    )\n",
     "\n",
-    "    def _block(self, in_channels, out_channels, kernel_size, stride, padding, bias, out=False):\n",
-    "        return nn.Sequential(            \n",
-    "            nn.Conv2d(in_channels=in_channels,\n",
-    "                               out_channels=out_channels, \n",
-    "                               kernel_size=kernel_size,\n",
-    "                               stride=stride,\n",
-    "                               padding=padding, \n",
-    "                               bias=bias),\n",
-    "            \n",
-    "            nn.BatchNorm2d(out_channels),\n",
-    "            nn.Sigmoid() if out else nn.LeakyReLU(0.2)\n",
-    "            )\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        return self.gan( x)"
+    "    with torch.no_grad():\n",
+    "        fake = gen(fixed_noise)\n",
+    "        img_grid_fake = torchvision.utils.make_grid(fake[:32], normalize=True)\n",
+    "        writer_fake.add_image(\"Fake\", img_grid_fake, global_step=step)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def test():\n",
-    "    x = torch.randn((5,3,64,64))\n",
-    "    disc = Discriminator(16)\n",
-    "    print(disc.forward(x).shape)\n",
-    "    \n",
-    "    x = torch.randn((5,100,1,1))\n",
-    "    gen = Generator(100,16)\n",
-    "    print(gen.forward(x).shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([5, 1, 1, 1])\n",
-      "torch.Size([5, 3, 64, 64])\n"
+      "Epoch [2/5] Batch 1700/2188           Loss D: 0.5747, loss G: 1.0878\n",
+      "Epoch [2/5] Batch 1800/2188           Loss D: 0.4965, loss G: 1.3796\n",
+      "Epoch [2/5] Batch 1900/2188           Loss D: 0.5416, loss G: 1.1554\n",
+      "Epoch [2/5] Batch 2000/2188           Loss D: 0.5712, loss G: 1.0644\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-5:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Mateusz\\anaconda3\\envs\\pytorch_11_2022\\lib\\threading.py\", line 1016, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\Mateusz\\anaconda3\\envs\\pytorch_11_2022\\lib\\site-packages\\tensorboard\\summary\\writer\\event_file_writer.py\", line 233, in run\n",
+      "    self._record_writer.write(data)\n",
+      "  File \"C:\\Users\\Mateusz\\anaconda3\\envs\\pytorch_11_2022\\lib\\site-packages\\tensorboard\\summary\\writer\\record_writer.py\", line 40, in write\n",
+      "    self._writer.write(header + header_crc + data + footer_crc)\n",
+      "  File \"C:\\Users\\Mateusz\\anaconda3\\envs\\pytorch_11_2022\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\io\\gfile.py\", line 766, in write\n",
+      "    self.fs.append(self.filename, file_content, self.binary_mode)\n",
+      "  File \"C:\\Users\\Mateusz\\anaconda3\\envs\\pytorch_11_2022\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\io\\gfile.py\", line 160, in append\n",
+      "    self._write(filename, file_content, \"ab\" if binary_mode else \"a\")\n",
+      "  File \"C:\\Users\\Mateusz\\anaconda3\\envs\\pytorch_11_2022\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\io\\gfile.py\", line 164, in _write\n",
+      "    with io.open(filename, mode, encoding=encoding) as f:\n",
+      "FileNotFoundError: [Errno 2] No such file or directory: b'logs/fake\\\\events.out.tfevents.1673142682.DESKTOP-O1TKTLE.20948.0'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [2/5] Batch 2100/2188           Loss D: 0.4703, loss G: 1.2294\n"
      ]
     }
    ],
    "source": [
-    "test()"
+    "step = 0\n",
+    "for epoch in range(EPOCHS):\n",
+    "    for batch_idx, (real_images, _) in enumerate(dataloader):\n",
+    "        real_images = real_images.to(device)\n",
+    "        z = torch.randn((BATCH_SIZE,Z_DIM, 1, 1)).to(device)\n",
+    "        fake_images = gen(z)\n",
+    "        \n",
+    "        # Train disc\n",
+    "        disc_real = disc(real_images).reshape(-1)\n",
+    "        loss_disc_real = criterion(disc_real, torch.ones_like(disc_real))\n",
+    "        disc_fake = disc(fake_images.detach()).reshape(-1)\n",
+    "        loss_disc_fake = criterion(disc_fake, torch.zeros_like(disc_fake))\n",
+    "        loss_disc = (loss_disc_real + loss_disc_fake)/2\n",
+    "        disc.zero_grad()\n",
+    "        loss_disc.backward(retain_graph=True)\n",
+    "        opt_disc.step()\n",
+    "        \n",
+    "        #Train generator\n",
+    "        output = disc(fake_images).reshape(-1)\n",
+    "        loss_gen = criterion(output, torch.ones_like(output))\n",
+    "        gen.zero_grad()\n",
+    "        loss_gen.backward()\n",
+    "        opt_gen.step()\n",
+    "        if batch_idx % 100 == 0:\n",
+    "            callback(epoch, batch_idx, loss_disc, loss_gen, gen, step)\n",
+    "            step += 1\n",
+    "        "
    ]
   },
   {
